--- a/vod/video.html
+++ b/vod/video.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>QCloud VIDEO UGC UPLOAD SDK</title>
@@ -49,7 +49,7 @@
     </p>
   </div>
   <form ref="vExample">
-    <input type="file" style="display:none;" ref="vExampleFile" @change="vExampleUpload" />
+    <input type="file" style="display:none;" ref="vExampleFile" @change="vExampleUpload"/>
   </form>
   <div class="row" style="padding:10px;">
     <h4>示例1：直接上传视频</h4>
@@ -58,20 +58,22 @@
   <!-- 上传信息组件	 -->
   <div class="uploaderMsgBox" v-for="uploaderInfo in uploaderInfos">
     <div v-if="uploaderInfo.videoInfo">
-      视频名称：{{uploaderInfo.videoInfo.name + '.' + uploaderInfo.videoInfo.type}}；
-      上传进度：{{Math.floor(uploaderInfo.progress * 100) + '%'}}；
-      fileId：{{uploaderInfo.fileId}}；
-      上传结果：{{uploaderInfo.isVideoUploadCancel ? '已取消' : uploaderInfo.isVideoUploadSuccess ? '上传成功' : '上传中'}}；
+      视频名称：{{ uploaderInfo.videoInfo.name + '.' + uploaderInfo.videoInfo.type }}；
+      上传进度：{{ Math.floor(uploaderInfo.progress * 100) + '%' }}；
+      fileId：{{ uploaderInfo.fileId }}；
+      上传结果：{{ uploaderInfo.isVideoUploadCancel ? '已取消' : uploaderInfo.isVideoUploadSuccess ? '上传成功' : '上传中' }}；
       <br>
-      地址：{{uploaderInfo.videoUrl}}；
-      <a href="javascript:void(0);" class="cancel-upload" v-if="!uploaderInfo.isVideoUploadSuccess && !uploaderInfo.isVideoUploadCancel" @click="uploaderInfo.cancel()">取消上传</a><br>
+      地址：{{ uploaderInfo.videoUrl }}；
+      <a href="javascript:void(0);" class="cancel-upload"
+         v-if="!uploaderInfo.isVideoUploadSuccess && !uploaderInfo.isVideoUploadCancel" @click="uploaderInfo.cancel()"
+      >取消上传</a><br>
     </div>
     <div v-if="uploaderInfo.coverInfo">
-      封面名称：{{uploaderInfo.coverInfo.name}}；
-      上传进度：{{Math.floor(uploaderInfo.coverProgress * 100) + '%'}}；
-      上传结果：{{uploaderInfo.isCoverUploadSuccess ? '上传成功' : '上传中'}}；
+      封面名称：{{ uploaderInfo.coverInfo.name }}；
+      上传进度：{{ Math.floor(uploaderInfo.coverProgress * 100) + '%' }}；
+      上传结果：{{ uploaderInfo.isCoverUploadSuccess ? '上传成功' : '上传中' }}；
       <br>
-      地址：{{uploaderInfo.coverUrl}}；
+      地址：{{ uploaderInfo.coverUrl }}；
       <br>
     </div>
   </div>
@@ -83,16 +85,16 @@
 
 <script type="text/javascript">
 
-  ;(function () {
+  ;(function() {
 
     /**
      * 计算签名。调用签名接口获取
      **/
     function getSignature() {
-      return axios.get("http://localhost:8301/admin/vod/sign").then(response =>{
+      return axios.get('http://localhost:8333/admin/vod/sign').then(response => {
         return response.data.data
       })
-    };
+    }
     var app = new Vue({
       el: '#main-area',
       data: {
@@ -101,9 +103,9 @@
         vcExampleVideoName: '',
         vcExampleCoverName: '',
 
-        cExampleFileId: '',
+        cExampleFileId: ''
       },
-      created: function () {
+      created: function() {
         this.tcVod = new TcVod.default({
           getSignature: getSignature
         })
@@ -112,24 +114,24 @@
         /**
          * vExample示例。添加视频
          **/
-        vExampleAdd: function () {
+        vExampleAdd: function() {
           this.$refs.vExampleFile.click()
         },
         /**
          * vExample示例。上传视频过程。
          **/
-        vExampleUpload: function () {
-          var self = this;
+        vExampleUpload: function() {
+          var self = this
           var mediaFile = this.$refs.vExampleFile.files[0]
 
           var uploader = this.tcVod.upload({
-            mediaFile: mediaFile,
+            mediaFile: mediaFile
           })
-          uploader.on('media_progress', function (info) {
-            uploaderInfo.progress = info.percent;
+          uploader.on('media_progress', function(info) {
+            uploaderInfo.progress = info.percent
           })
-          uploader.on('media_upload', function (info) {
-            uploaderInfo.isVideoUploadSuccess = true;
+          uploader.on('media_upload', function(info) {
+            uploaderInfo.isVideoUploadSuccess = true
           })
 
           console.log(uploader, 'uploader')
@@ -142,35 +144,35 @@
             fileId: '',
             videoUrl: '',
             cancel: function() {
-              uploaderInfo.isVideoUploadCancel = true;
+              uploaderInfo.isVideoUploadCancel = true
               uploader.cancel()
-            },
+            }
           }
 
           this.uploaderInfos.push(uploaderInfo)
           uploader.done().then(function(doneResult) {
             console.log('doneResult', doneResult)
-            uploaderInfo.fileId = doneResult.fileId;
-            return doneResult.video.url;
-          }).then(function (videoUrl) {
+            uploaderInfo.fileId = doneResult.fileId
+            return doneResult.video.url
+          }).then(function(videoUrl) {
             uploaderInfo.videoUrl = videoUrl
-            self.$refs.vExample.reset();
+            self.$refs.vExample.reset()
           })
         },
         // cExample 上传过程
         cExampleUpload: function() {
-          var self = this;
-          var coverFile = this.$refs.cExampleCover.files[0];
+          var self = this
+          var coverFile = this.$refs.cExampleCover.files[0]
 
           var uploader = this.tcVod.upload({
             fileId: this.cExampleFileId,
-            coverFile: coverFile,
+            coverFile: coverFile
           })
           uploader.on('cover_progress', function(info) {
-            uploaderInfo.coverProgress = info.percent;
+            uploaderInfo.coverProgress = info.percent
           })
           uploader.on('cover_upload', function(info) {
-            uploaderInfo.isCoverUploadSuccess = true;
+            uploaderInfo.isCoverUploadSuccess = true
           })
           console.log(uploader, 'uploader')
 
@@ -179,32 +181,36 @@
             isCoverUploadSuccess: false,
             coverProgress: 0,
             coverUrl: '',
-            cancel: function () {
+            cancel: function() {
               uploader.cancel()
-            },
+            }
           }
 
           this.uploaderInfos.push(uploaderInfo)
 
-          uploader.done().then(function (doneResult) {
+          uploader.done().then(function(doneResult) {
             console.log('doneResult', doneResult)
-            uploaderInfo.coverUrl = doneResult.cover.url;
-            self.$refs.cExample.reset();
+            uploaderInfo.coverUrl = doneResult.cover.url
+            self.$refs.cExample.reset()
           })
-        },
-      },
+        }
+      }
     })
-  })();
+  })()
 
 </script>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-26476625-7"></script>
 <script>
   // add by alsotang@gmail.com
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-  gtag('config', 'UA-26476625-7');
+  window.dataLayer = window.dataLayer || []
+
+  function gtag() {
+    dataLayer.push(arguments)
+  }
+
+  gtag('js', new Date())
+  gtag('config', 'UA-26476625-7')
 </script>
 </body>
 </html>
